tests/baselines/reference/accessorsEmit.errors.txt
accessorsEmit.ts(6,9): error TS2322: Type 'null' is not assignable to type 'Result'.


==== accessorsEmit.ts (1 errors) ====
    class Result { }
    
    class Test {
        get Property(): Result {
            var x = 1;
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Result'.
        }
    }
    
    class Test2 {
        get Property() {
            var x = 1;
            return null;
        }
    }